--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "devDependencies": {
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "mocha": "~1.12.0",
+    "expect.js": "~0.2.0",
+    "mocha-phantomjs": "~3.1.0"
   }
 }
