--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "grunt mocha:all"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,6 @@
     "grunt": "~0.4.1",
     "mocha": "~1.12.0",
     "expect.js": "~0.2.0",
-    "mocha-phantomjs": "~3.1.0"
+    "grunt-mocha": "~0.4.1"
   }
 }
