--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "keywords": [
     "template",
     "data-binding",
-    "MVW", "MVC", "MVVM", "MDV"
+    "MVW",
+    "MVC",
+    "MVVM",
+    "MDV"
   ],
   "author": "Justan <ckr189@gmail.com>",
   "license": "MIT",
@@ -28,9 +31,9 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt": "~0.4.1",
-    "mocha": "~1.12.0",
+    "mocha": "~1.13.0",
     "expect.js": "~0.2.0",
     "grunt-mocha": "~0.4.1",
-    "pygmentize-bundled": "~1.2.0"
+    "pygmentize-bundled": "~2.1.0"
   }
 }
