--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "expect.js": "~0.3.1",
     "grunt-mocha": "~0.4.1",
     "pygmentize-bundled": "~2.1.0",
-    "requirejs": "~2.1.9",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-browserify": "~2.0.8",
+    "browserify": "~3.44.2"
   }
 }
