--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "grunt test",
-    "mocha": "mocha"
+    "test": "tape test/test*.js"
   },
   "repository": {
     "type": "git",
@@ -30,13 +29,11 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt": "~0.4.1",
-    "mocha": "~1.13.0",
-    "expect.js": "~0.3.1",
-    "grunt-mocha": "~0.4.1",
     "pygmentize-bundled": "~2.1.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-browserify": "~2.0.8",
     "browserify": "~3.44.2",
-    "tape": "~2.13.1"
+    "tape": "~2.13.1",
+    "jquery": "~1.11.1"
   }
 }
