--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ant.js",
   "version": "0.3.0-alpha",
   "description": "数据驱动 HTML 模板",
-  "main": "dist/ant.js",
+  "main": "src/ant.js",
   "directories": {
     "example": "examples"
   },
