--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ant.js",
-  "version": "0.2.0-beta",
+  "version": "0.3.0-dev",
   "homepage": "http://antjs.org",
   "authors": [
     "Justan <ckr189@gmail.com>"
